# tokio-epoll-uring

./: BENCHMARKING.md  Cargo.toml  README.md  deny.toml
.github/workflows/: build_and_test.yml
benchmark/: Cargo.toml
benchmark/scripts/: postprocess.py  runbench.sh
benchmark/src/: engines.rs  main.rs
benchmark/src/engines/: std_thread.rs  tokio_epoll_uring.rs  tokio_on_executor_thread.rs  tokio_spawn_blocking.rs  tokio_uring.rs
examples/: basic.rs  basic_thread_local.rs  block_in_place.rs  borrow_system.rs  borrow_system_basic.rs  thread_local.rs  thread_local_basic.rs  thread_local_block_in_place.rs
src/: borrow_system.rs  lib.rs  ops.rs  preadv.rs  rest.rs  shared_system_handle.rs  shutdown_request.rs  system.rs  system_lifecycle.rs  thread_local.rs  thread_local_system.rs  thread_local_system_handle.rs
src/doc/: benchmarks.rs  design.md  mod.rs  motivation.md  motivation_and_design.md  motivation_and_design.rs
src/ops/: mod.rs  nop.rs  preadv.rs  read.rs
src/system/: completion.rs  lifecycle.rs  mod.rs  slots.rs  submission.rs  tests.rs
src/system/lifecycle/: handle.rs  thread_local.rs
src/system/submission/: op_fut.rs
src/system_lifecycle/: borrow_based.rs  thread_local.rs
src/util/: mod.rs  oneshot_nonconsuming.rs
tokio-epoll-uring/: Cargo.toml
tokio-epoll-uring/examples/: basic.rs  thread_local.rs
tokio-epoll-uring/src/: lib.rs  metrics.rs
tokio-epoll-uring/src/doc/: benchmarks.md  design.md  mod.rs  motivation.md
tokio-epoll-uring/src/ops/: fsync.rs  mod.rs  nop.rs  open_at.rs  read.rs  rename.rs  statx.rs  write.rs
tokio-epoll-uring/src/system/: completion.rs  kernel_support.rs  lifecycle.rs  mod.rs  slots.rs  submission.rs  test_util.rs  tests.rs
tokio-epoll-uring/src/system/lifecycle/: handle.rs  thread_local.rs
tokio-epoll-uring/src/system/submission/: op_fut.rs
tokio-epoll-uring/src/system/test_util/: shared_system_handle.rs  timerfd.rs
tokio-epoll-uring/src/util/: mod.rs  oneshot_nonconsuming.rs  submitting_box.rs
uring-common/: Cargo.toml
uring-common/src/: buf.rs  io_fd.rs  lib.rs  open_options.rs  open_options_io_uring_ext.rs
uring-common/src/buf/: bounded.rs  io_buf.rs  io_buf_mut.rs  slice.rs
uring-common/src/ext/: impl_iobuf_for_array.rs  mod.rs
uring-kernel-interface/: Cargo.toml
uring-kernel-interface/src/: lib.rs
