[package]
name = "tokio-io_uring-eventfd-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-macro = "2.1.5"
io-uring = "0.6.0"
lazy_static = "1.4.0"
libc = "0.2.147"
scopeguard = "1.1.0"
tokio = { version = "1.29.1", features = ["io-std"] }
tokio-uring = "0.4.0"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tempfile = "3.6.0"
tracing-subscriber = "*"
