[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmarks to compare tokio-epoll-uring performance to other solutions"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.3.9", features = ["help", "usage", "error-context", "derive"] }
ctrlc = "3.4.0"
libc = "0.2.147"
rand = "0.8.5"
timerfd = "1.5.0"
tokio = { version = "1.29.1", features = ["full"] }
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio-epoll-uring = { path = "../tokio-epoll-uring" }
crossbeam-utils = "0.8.16"
itertools = "0.11.0"
serde_json = "1.0.103"
hdrhistogram = "7.5.2"
serde = { version = "1.0.176", features = ["serde_derive"] }
serde_with = "3.1.0"
humantime = "2.1.0"
tokio-uring = "0.4.0"

