[package]
name = "tokio-epoll-uring"
description = "Use io_uring from vanilla tokio."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/neondatabase/tokio-epoll-uring"
license = "MIT OR Apache-2.0"

[dependencies]
futures = "0.3.28"
once_cell = "1.18.0"
scopeguard = "1.1.0"
thiserror = "1.0.44"
tokio = {version = "1.38.1", features = ["test-util"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
uring-common = { path = "../uring-common" , features = [ "bytes" ] }
nix = "0.26.2"

[dev-dependencies]
tempfile = "3.6.0"
tracing-subscriber = "*"
os_pipe = "1.1.4"
assert-panic = "1.0.1"
bytes = "*"
