[package]
name = "uring-common"
version = "0.1.0"
edition = "2021"
description = "a subset of types from the `tokio-uring` crate"
license = "MIT" # the same as tokio-uring at the time we forked it

[dependencies]
libc = "0.2.80"
bytes = { version = "1.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6.0"
